ghost/admin/app/styles/components/modals.css
/* Modals
/* ---------------------------------------------------------- */


/* Fullscreen Modal
/* ---------------------------------------------------------- */

/* explicit modal container so that background and content can be animated individually */
.fullscreen-modal-container {
    display: flex;
    justify-content: center;
    visibility: hidden;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 10000;
    overflow: auto;
    height: 100vh;
}

.fullscreen-modal-background {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 50;
    height: 100vh;
    background: #324750;
    opacity: 0.86;
}

.fullscreen-modal {
    position: relative;
    z-index: 100;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 30px;
    max-width: 550px;
    pointer-events: auto;
}

@media (max-width: 900px) {
    .fullscreen-modal {
        padding: 10px;
    }
}

/* Modifiers
/* ---------------------------------------------------------- */

.fullscreen-modal-wide {
    width: 100%;
    max-width: 550px;
}

.fullscreen-modal-action {
    margin: 6vw 0;
}


/* The modal
/* ---------------------------------------------------------- */


/* Modal content
/* ---------------------------------------------------------- */

.modal-content {
    position: relative;
    padding: 40px;
    background-color: #fff;
    background-clip: padding-box;
    border-radius: 6px;
    box-shadow: 1px 3px 8px rgba(0,0,0,.09), 8px 14px 38px rgba(0,0,0,.15);
}

.modal-content * {
    user-select: text;
}

.modal-content .close {
    position: absolute;
    top: 19px;
    right: 19px;
    z-index: 9999;
    margin: 0;
    padding: 0;
    width: 16px;
    height: 16px;
    border: none;
}

.modal-content .close svg {
    fill: #808284;
    width: 16px;
    height: 16px;
}

.modal-content .close svg:hover {
    fill: var(--darkgrey);
}

.modal-header {
    position: relative;
    margin-bottom: 22px;
}

.modal-header h1 {
    display: inline-block;
    margin: -5px 25px 0 0;
    font-size: 2.2rem;
    line-height: 1.15em;
    font-weight: 600;
    letter-spacing: 0.4px;
}

.modal-body {
    position: relative;
    overflow-y: auto;
}

.modal-body p {
    font-size: 1.4rem;
}

.modal-footer {
    display: flex;
    justify-content: flex-end;
    margin-top: 20px;
}

.modal-footer button {
    margin-left: 12px;
    min-width: 100px;
    text-align: center;
}

.modal-footer button:first-of-type {
    margin-left: 0;
}

.modal-body .gh-image-uploader {
    margin: 0;
    background: color(var(--lightgrey) l(+4%));
}


/* Content Modifiers
/* ---------------------------------------------------------- */

.modal-body fieldset {
    margin: 0;
}

/* Login styles */
.modal-body .login-form {
    display: block;
}

.modal-body .login-form .password-wrap input {
    width: 100%;
    margin-right: 20px;
}

.modal-body .login-form .gh-btn span {
    height: 38px;
}

@media (max-width: 900px) {
    .modal-body .login-form {
        margin: 0 auto;
        max-width: 264px;
    }
    .modal-body .login-form .password-wrap {
        margin: 0 auto 1em;
        width: 100%;
    }
    .modal-body .login-form .password-wrap input {
        margin-right: 0;
    }
    .modal-body .login-form .gh-btn {
        margin: 0;
        margin-bottom: 1em;
        width: 100%;
    }
}

@media (min-width: 901px) {
    .modal-body .login-form {
        display: flex;
        align-items: center;
    }
    .modal-body .login-form .password-wrap {
        flex: 1;
        margin-right: 10px;
    }
}

